<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <artifactId>knowledge-service</artifactId>
        <groupId>com.knowledge</groupId>
        <version>3.4.1</version>
    </parent>
    <artifactId>knowledge-agent-skills</artifactId>
    <version>3.4.1</version>
    <packaging>jar</packaging>
    <properties>
        <java.version>1.8</java.version>
    </properties>

    <dependencies>
        <!-- Platform core -->
        <dependency>
            <groupId>com.knowledge</groupId>
            <artifactId>knowledge-core-boot</artifactId>
            <version>${knowledge.tool.version}</version>
        </dependency>
        <dependency>
            <groupId>com.knowledge</groupId>
            <artifactId>knowledge-core-oss</artifactId>
            <version>${knowledge.tool.version}</version>
        </dependency>
        <dependency>
            <groupId>com.knowledge</groupId>
            <artifactId>knowledge-agent-api</artifactId>
            <version>${knowledge.project.version}</version>
        </dependency>
        <dependency>
            <groupId>com.knowledge</groupId>
            <artifactId>knowledge-core-agent</artifactId>
            <version>${knowledge.tool.version}</version>
        </dependency>
        <dependency>
            <groupId>com.knowledge</groupId>
            <artifactId>knowledge-core-cloud</artifactId>
            <version>${knowledge.tool.version}</version>
        </dependency>
        <dependency>
            <groupId>cn.hutool</groupId>
            <artifactId>hutool-all</artifactId>
        </dependency>

        <!-- Jsoup for HTML parsing and content extraction -->
        <dependency>
            <groupId>org.jsoup</groupId>
            <artifactId>jsoup</artifactId>
            <version>1.17.2</version>
        </dependency>

        <!-- WebFlux for SSE streaming -->
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-webflux</artifactId>
        </dependency>

        <!-- Redis for session/skill cache -->
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-data-redis</artifactId>
        </dependency>

        <!-- Jackson -->
        <dependency>
            <groupId>com.fasterxml.jackson.core</groupId>
            <artifactId>jackson-databind</artifactId>
        </dependency>

        <!-- Test dependencies -->
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-test</artifactId>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-maven-plugin</artifactId>
            </plugin>
            <plugin>
                <groupId>com.spotify</groupId>
                <artifactId>docker-maven-plugin</artifactId>
                <version>${docker.plugin.version}</version>
                <configuration>
                    <imageName>${docker.registry.host}/knowledge/${project.artifactId}:${project.version}</imageName>
                    <dockerDirectory>${project.basedir}</dockerDirectory>
                    <dockerHost>${docker.host}</dockerHost>
                    <resources>
                        <resource>
                            <targetPath>/</targetPath>
                            <directory>${project.build.directory}</directory>
                            <include>${project.build.finalName}.jar</include>
                        </resource>
                    </resources>
                    <registryUrl>${docker.registry.url}</registryUrl>
                    <serverId>${docker.registry.url}</serverId>
                    <pushImage>false</pushImage>
                </configuration>
            </plugin>
        </plugins>
    </build>
</project>
